--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="남반장 - 프로필 링크" />
         <meta property="og:description" content="남반장 포토폴리오" />
         <meta property="og:image" content="공유할 이미지" />
-        <title>르탄이 - 프로필 링크</title>
+        <title>남반장 - 프로필 링크</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             * {
